[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "realm-sync-api"
version = "0.1.0"
description = "A FastAPI-based API framework for managing game data with Redis and PostgreSQL support"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "RealmSync Team"}
]
keywords = ["fastapi", "api", "game", "redis", "postgresql"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "redis>=5.0.0",
    "psycopg2-binary>=2.9.0",
    "httpx>=0.25.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "fastapi-swagger-dark>=0.0.8",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
rs-test = "scripts.test:main"
rs-lint = "scripts.lint:main"
rs-imports = "scripts.check_imports:main"

[project.urls]
Homepage = "https://github.com/ghalrym/RealmSync"
Documentation = "https://github.com/ghalrym/RealmSync#readme"
Repository = "https://github.com/ghalrym/RealmSync"
Issues = "https://github.com/ghalrym/RealmSync/issues"

[tool.setuptools]
packages = ["realm_sync_api", "scripts"]
include-package-data = true

[tool.setuptools.package-data]
realm_sync_api = [
    "web_manager/static/*",
    "web_manager/templates/*",
]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "B017",  # do not assert blind exception: `Exception` - common in tests
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "--cov=realm_sync_api --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
source = ["realm_sync_api"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/setup.py",
    "*/scripts/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
fail_under = 95

