[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "example"
version = "0.1.0"
description = "A RealmSync API project"
requires-python = ">=3.11"
dependencies = [
    # realm-sync-api is installed separately in Dockerfile from local source
    # To install from PyPI instead, add: "realm-sync-api"
    "python-dotenv",
    "uvicorn[standard]>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[tool.setuptools]
packages = ["example"]

